Updated the container images in container2 with latest tag

--- a/deployment2.yml
+++ b/deployment2.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: container2
-        image: us-central1-docker.pkg.dev/assignment3-428215/k8srepository/container2
+        image: us-central1-docker.pkg.dev/assignment3-428215/k8srepository/container2:latest
         imagePullPolicy: Always
         ports:
           - containerPort: 7000
