Moved the K8s files into container2deployment directory and updated the deploy stage

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,8 +13,8 @@ steps:
   - name: "gcr.io/cloud-builders/gke-deploy"
     args:
       - run
-      - --filename=./deployment2.yml
-      - --filename=./service2.yml
+      - --filename=./container2deployment/
+#      - --filename=./service2.yml
       - --location=us-central1-c
       - --cluster=cluster-assignment-3
 options:
