--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -21,8 +21,8 @@ steps:
   - name: "gcr.io/cloud-builders/kubectl"
     args:
       - "delete"
-      - "--all"
-      - "deployment"
+#      - "--all"
+      - "deployment.apps/container2-deployment"
     env:
       - 'CLOUDSDK_COMPUTE_ZONE=us-central1-c'
       - 'CLOUDSDK_CONTAINER_CLUSTER=cluster-assignment-3'
